# med-partners

./: .gitignore  ARCHITECTURE.md  DEMO.md  EVAL.md  README.md  REPORT.md  roadmap.html  РЕШЕНИЕ_по_ТЗ.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  cli.py  config.py  currency.py  main.py
backend/app/api/routers/: documents.py  partners.py  review.py  search.py  services.py  upload.py
backend/app/data/: service_descriptions.json
backend/app/db/: base.py  session.py
backend/app/eval/: evaluate.py
backend/app/extractors/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py  registry.py  vision_extract.py  xls_extractor.py  xlsx_extractor.py
backend/app/extractors/common/: category_detect.py  column_map.py  line_items.py  (+5 more)
backend/app/models/: __init__.py  enums.py  match_decision.py  partner.py  price_document.py  price_item.py  price_tier.py  service.py
backend/app/normalization/: _breaker.py  code_match.py  dictionary.py  embeddings.py  engine.py  fuzzy.py  llm_normalize.py  llm_rerank.py  rerank.py  text_norm.py
backend/app/schemas/: dto.py
backend/app/services/: ingestion.py  jobs.py  normalize_all.py  processing.py  report.py  review_ops.py  search.py  versioning.py
backend/app/tasks/: celery_app.py  process_document.py
backend/app/validation/: engine.py  rules.py
backend/tests/: test_api.py  test_code_match.py  test_column_map.py  test_dictionary_loader.py  test_price_parse.py  test_validation.py
(+39 files in other folders)
