[project]
name = "medarchive"
version = "0.1.0"
description = "MedArchive — automatic processing of clinic price lists into a normalized, versioned services/prices database"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "celery>=5.3",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    # extraction
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10.2",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pandas>=2.2",
    # normalization
    "rapidfuzz>=3.6",
    "numpy>=1.26",
    # OpenAI: embeddings (text-embedding-3-large) + LLM reranker (gpt-4o-mini).
    # Default normalization stack — no local torch needed.
    "openai>=1.40",
]

[project.optional-dependencies]
# Heavy semantic-matching stack. Optional: system falls back to RapidFuzz-only if absent.
embeddings = [
    "sentence-transformers>=2.6",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
medarchive = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
